@@ -29,6 +29,10 @@ Tests
    Otherwise it procees to the creation of the database and the activation of
    the module.
 
+   ``DB_CACHE_JOBS`` environment variable defines the number of jobs used for
+   dump and restore operations.
+   The default value is the number of CPU.
+
 ModuleTestCase
 --------------
 
